Fixed edit tasks dark mode bug

--- a/edit-taskdark.css
+++ b/edit-taskdark.css
@@ -347,7 +347,7 @@ body {
 }
 
 .back {
-    background-color: #1E1E1E; /* Dark background color */
+    background-color: #1a1a1a; /* Dark background color */
     color: #FFFFFF; /* White text color */
 }
 
